--- a/src/components/Output.css
+++ b/src/components/Output.css
@@ -1,4 +1,14 @@
 .output {
   grid-column-start: 1;
   grid-column-end: 5;
+  border-width: 2px;
+  border-style: solid;
+  border-color: yellow;
+  margin-bottom: 10px;
+  resize: none;
+  border-radius: 5px;
+  font-size: 30px;
+  padding: 10px;
+  text-align: right;
+  border-color: rgba(0,0,0,.25);
 }
