--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,15 @@
   background-color: #585858;
   padding: 50px 30px;
   border-radius: 10px;
-  border-width: 0 5px 5px 0;
+  border-width: 3px;
   border-style: solid;
   border-color: rgba(0,0,0,.25);
   grid-gap: 15px;
+}
+.sign-mode-text {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 15px;
 }
