--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .calculator {
   display: grid;
   width: 350px;
-  margin: 50vh auto 0;
-  transform: translateY(-50%);
+  margin: 40px auto;
   grid-template-columns: repeat(4, 1fr);
   background-color: #585858;
   padding: 50px 30px;
@@ -12,10 +11,27 @@
   border-color: rgba(0,0,0,.25);
   grid-gap: 15px;
 }
+
 .sign-mode-text {
   grid-column-start: 1;
   grid-column-end: 5;
   text-align: center;
   color: #fff;
   margin-bottom: 15px;
+}
+
+.toggle-buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.toggle-buttons button {
+  background-color: gray;
+  color: white;
+  font-size: 20px;
+  padding: 20px 0;
+  cursor: pointer;
+}
+.toggle-buttons button:hover {
+  opacity: .75;
 }
