--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.App {
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+.App.dark {
+  background-color: #000;
+}
+
 .calculator {
   display: grid;
   width: 350px;
@@ -10,6 +19,10 @@
   border-style: solid;
   border-color: rgba(0,0,0,.25);
   grid-gap: 15px;
+}
+
+.calculator.dark {
+  background-color: #6ada8d;
 }
 
 .sign-mode-text {
