--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,4 +3,11 @@
   border-radius: 10px;
   font-size: 30px;
   cursor: pointer;
+  background-color: #f0f0f0;
+  font-color: #000;
+}
+
+.button.dark {
+  background-color: #666;
+  font-color: #fff;
 }
